Add Base64 wrapper to support the jdk7 and later.